syntax = "proto3";
package academictoken.curriculum;

option go_package = "github.com/Bianca-29MSP/AcademicToken/x/curriculum/types";

message CourseEquivalence {
  string index = 1; 
  string sourceTokenId = 2; 
  string targetInstitution = 3; 
  string targetCourseCode = 4; 
  uint64 equivalenceStatus = 5; 
  uint64 approvalCount = 6; 
  
}

